...
      <View style={styles.wordHeader}>
        <View style={styles.wordTitleRow}>
          <Text style={styles.wordText}>{word}</Text>
          <View style={styles.newBadge}>
            <Text style={styles.newBadgeText}>NEW</Text>
          </View>
          <TouchableOpacity accessibilityLabel="Search New Word" style={styles.searchButton} onPress={handleLookupOriginalWord}>
            <Ionicons name="search" size={16} color={Colors.primary} />
          </TouchableOpacity>
          <MasteryLevelDropdown onSelect={handleMasterySelect} />
        </View>
        <TouchableOpacity onPress={onClose}>
          <Ionicons name="close" size={22} color={Colors.textSecondary} />
...
