...
        }}
        onMessage={handleMessage}
        javaScriptEnabled
      />
      {loading && (
        <View
          accessibilityLabel="Loading Overlay"
          style={styles.loadingOverlay}
        >
          <ActivityIndicator
            size="large"
            color={Colors.primary}
          />
...

      {!!toast && <Toast message={toast ?? ''} />}

      {showFab && (
        <FabBubble
          icon="download-outline"
          text="Get Lyrics"
          onPress={handleScrapeLyrics}
          tailPosition="left"
          left={10}
          bottom={0}
        />
      )}
...
