...
    />
  );

  const languageTabsToggle = (
    <TouchableOpacity onPress={() => setShowLanguageTabs(!showLanguageTabs)} style={styles.toggleButtons}>
      <Ionicons
        name="language-outline"
        size={22}
        color={selectedLanguages.length > 0 ? Colors.primary : Colors.textMuted}
      />
    </TouchableOpacity>
  );

...
      style={[styles.toggleButtons, showSearch ? styles.closeSearchButton : styles.openSearchButton]}
    >
      <Ionicons name={showSearch ? 'close' : 'search'} size={22} color={Colors.textMuted} />
    </TouchableOpacity>
  );

  const title = <Text style={[styles.title, showSearch && { opacity: 0 }]}>Saved Words</Text>;

  return (
    <ScreenWrapper>
      <View style={styles.titleRow}>
        {searchInput}
        {title}
...
