...
            placeholderTextColor={Colors.textMuted}
            value={searchQuery}
            onChangeText={setSearchQuery}
            autoFocus
          />
        ) : (
          <Text style={styles.title}>Saved Songs</Text>
        )}
        <TouchableOpacity onPress={cycleSortMode} style={styles.searchButton}>
          <Ionicons
            name={getSortIcon()}
            size={22}
            color={Colors.textMuted}
...
