appId: com.dleanjeans.lyricsionary
---
# Verifies that the "Already Saved!" FAB does not appear after saving a new song

- runFlow: ../00-launch-app.yaml

- tapOn: "Song Name"
- inputText: "#125 - No Already Saved!"

- tapOn: "Save"

- assertNotVisible: "Already Saved!"